--- a/about.html
+++ b/about.html
@@ -36,17 +36,7 @@
 <p>As stated before, I am Jericho Amazona. I was born 27 December, 2012, and as of writing, I am 11 years old.
 
 <br> I currently live in Tondo, Manila, Philippine Islands, and study in Manila Cathedral School at the 5th Grade.
-
-<br>My mother is <a href="https://www.facebook.com/jackie.decastroamazona09">Jacqueline Amazona,</a> 
-and my father is <a href="https://www.facebook.com/lito.amazona">Anacleto Amazona.</a>
-
-<br>They both work at Malacañang, specifically RTVM. My mother is a Development Management Officer, while my father is a Director Management Graphics Artist.
-
-I have 2 sisters that are both older than me. The older is <a href="https://www.instagram.com/yellowschmellow.arts/">Anaiah Amazona</a> and the oldest is <a href="https://www.instagram.com/laulokinstr/">Laura Amazona</a>.
-
-<br>The former is currently studying ICT (Information and Communication Technologies) in NTC (National Teacher's College), while the latter is currently studying Medical Technologies in MMC (Metropolitan Medical Center).
-
-<h1 class="hobbieshead">HOBBIES?!?!?</h1>
+HOBBIES?!?!?</h1>
 
 <h3>VEXILLOLOGY?!?!</h3>
 
